--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ The S-stars cluster
 </p>
 </div>
 </div><div class="fragment abs" data-fragment-index="3">
-<video data-autoplay src="figs\nbody.mp4"></video>
+<video data-autoplay src="https://drive.google.com/uc?export=download&id=0B43Ml5PnmtjPTUJ4MmNBYUotSWs&authuser=0" type="video/mp4"></video>
 <font size="5">
 <p>
 \(N\)-body simulation
@@ -239,14 +239,14 @@ x}\left[D_{1}\left(E\right)f\left(E,t\right)\right]
 
 </div> <div class="col-6"><div id="container">
 <div class="fragment fade-out abs" data-fragment-index="1">
-<video data-autoplay src="figs\nbody.mp4"></video>
+<video data-autoplay src="https://drive.google.com/uc?export=download&id=0B43Ml5PnmtjPTUJ4MmNBYUotSWs&authuser=0" type="video/mp4"></video>
 <font size="5">
 <p>
 \(N\)-body simulation
 </p>
 </font>
 </div><div class="fragment abs" data-fragment-index="1">
-<video data-autoplay src="figs\nwires.mp4"></video>
+<video data-autoplay src="https://drive.google.com/uc?export=download&id=0B43Ml5PnmtjPU1BUeDloczRTUHM&authuser=0" type="video/mp4"></video>
 <font size="5">
 <p>
 \(N\)-body simulation
@@ -277,7 +277,7 @@ Description by a <font color = "yellow">Fokker-Planck</font> equation?
 </p>
 </h4>
 </div> <div class="col-6">
-<video src="figs\nwires.mp4#t=30"></video>
+<video src="https://drive.google.com/uc?export=download&id=0B43Ml5PnmtjPU1BUeDloczRTUHM&authuser=0#t=30" type="video/mp4"></video>
 </div></div></div>
 
 </section>
@@ -413,7 +413,7 @@ frequency.</li>
 </ul>
 </div> <div class="col-6"><div id="container">
 <div class="abs" data-fragment-index="1">
-<video data-autoplay src="figs\noise.mp4"></video>
+<video data-autoplay src="https://drive.google.com/uc?export=download&id=0B43Ml5PnmtjPX3BBQ1FsUllITXc&authuser=0" type="video/mp4"></video>
 </div><div class="fragment abs" data-fragment-index="1">
 
 <div class="figure">
@@ -421,7 +421,6 @@ frequency.</li>
 </p>
 </div>
 </div></div></div></div></div>
-
 </section>
 </section>
 <section>
