--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Stellar Dynamics near a Massive Black Hole</title>
-<meta name="author" content="(Ben Bar-Or and Tal Alexander  (export-snippet (:back-end html :value <br><h3>Weizmann Institute of Science</h3> :begin 30 :end 81 :post-blank 0 :parent #0)))"/>
+<title>Stellar Dynamics around a Massive Black Hole</title>
+<meta name="author" content="(Ben Bar-Or and Tal Alexande)"/>
 
 <link rel="stylesheet" href="./css/reveal.css"/>
 <link rel="stylesheet" href="./css/theme/night.css" id="theme"/>
@@ -25,7 +25,7 @@
 <div class="reveal">
 <div class="slides">
 <section id="sec-title-slide">
-<h1>Stellar Dynamics near a Massive Black Hole</h1><h2><br></h2><h2>Ben Bar-Or and Tal Alexander <br><h3>Weizmann Institute of Science</h3></h2>
+<h1>Stellar Dynamics around a Massive Black Hole</h1><br><h2>Ben Bar-Or and Tal Alexande</h2><br><h3>Weizmann Institute of Science</h3>
 </section>
 
 <section>
@@ -231,7 +231,7 @@ x}\left[D_{1}\left(E\right)f\left(E,t\right)\right]
 </h4>
 <ul>
 <li>Stochastic residual torque</li>
-<li>Sort timescales (\(P < t < T_c\)): angular momentum changes coherently</li>
+<li>Short timescales (\(P < t < T_c\)): angular momentum changes coherently</li>
 <li>Longer timescales (\(T_c < t\)): random walk in angular momentum</li>
 <li>Relaxation can be fast: \(T_{RR}\approx\left(P/T_{\mathrm{coh}}\right)T_{\mathrm{relax}}\log\Lambda\)</li>
 
@@ -315,7 +315,7 @@ Description by a <font color = "yellow">Fokker-Planck</font> equation?
 <div class="grid"> <div class="row"> <div class="col-6">
 <ul>
 <li>Random walk in phase space</li>
-<li>Much faster then \(2\)-body relaxation</li>
+<li>Much faster than \(2\)-body relaxation</li>
 <li>Relax to isotropic angular momentum</li>
 <li>Coherent time = Mass precession</li>
 <li><font color = "yellow">All stars will plunge into the massive black hole</font></li>
@@ -428,11 +428,11 @@ frequency.</li>
 <h2 id="orgheadline10">The time evolution depends on the noise properties</h2>
 <div class="grid"> <div class="row"><div class="col-4">
 <ul>
-<li>Good match between the stochastic equation of motions (circles)
+<li>Good match between the stochastic equation of motion (circles)
 and the effective Fokker-plank (lines)</li>
-<li>Smooth (<font color = "red">Gaussian</font>) noise results in <font color = "yellow">adiabatic invariant</font></li>
+<li>Smooth (<font color = "red">Gaussian</font>) noise results in <font color = "yellow">adiabatic invariance</font></li>
 <li>Non-Smooth (<font color = "green">Exponential</font>) noise results in weak conservation of adiabatic
-invariant</li>
+invariance</li>
 
 </ul>
 </div> <div class="col-8"><div id="container">
